fix: Table of contents not wrapping text

--- a/source/_assets/sass/_table-of-contents.scss
+++ b/source/_assets/sass/_table-of-contents.scss
@@ -9,6 +9,9 @@
     z-index: 2;
     height: calc(100vh - 7rem);
 
+    min-width: 0;
+    min-height: 0;
+
     nav ul {
         display: grid;
         gap: map-get($spacers, 2);
